<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_name">校园网登录</string>
    <string name="mainTitle">北京邮电大学校园网登陆</string>
    <string name="Wifi_List">Wifi名单：</string>
    <string name="needLoginWifis">需登录</string>
    <string name="freeLoginWifis">免登录</string>
    <string name="input_wifi_name">在这输入新的wifi名称</string>
    <string name="userName">账号</string>
    <string name="passWord">密码</string>
    <string name="cancle">取消</string>
    <string name="finish">完成</string>
    <string name="app_name">学习助手</string>
    <string name="menu_settings">设置</string>
    <string name="set">设置</string>
    <string name="message_set">消息设置</string>
    <string name="quiet">开启上课自动静音</string>  
    <string name="remind">开启课前振动提醒</string>
    <string name="in_classroom_quiet">开启进入教室静音</string>
    <string name="set_in_classroom_quiet">进入教室自动静音设置</string>
    <string name="set_classroom_site">设置教室位置</string>
    <string name="set_classroom_radius">设置教室半径：</string>
    <string name="radius_limit">10米到200米之间</string>
    <string name="atitude_and_longitude">教室的经纬度：</string>
    <string name="classroom_site">详细位置：</string>
    <string name="get_classroom_site">设置当前位置为教室位置</string>
    <string name="about_app">软件相关</string>
    <string name="revision">版本支持</string>  
    <string name="us">关于作者</string>                   
    <string name="login">登录校网</string>
    <string name="freeClassroom">空闲教室</string>
    <string name="schoolType">查询本部空闲教室</string>
    <string name="exit">退出</string> 
    <string name="back">返回</string>     
    <string name="edit_title">课程信息</string> 
    <string name="course_name">课程名称：</string>
    <string name="course_address">教室地点：</string>
    <string name="course_teacher">老师姓名：</string>  
    <string name="course_amount">上课节数：</string> 
    <string name="course_week">上课周数：</string> 
    <string name="course_time">上课时间：</string> 
    <string name="input_course_name">请输入课程名称</string>
    <string name="input_course_address">请输入教室地点</string>
    <string name="input_course_teacher">请输入老师姓名</string>  
    <string name="input_course_week">总周数或单双周</string> 
    <string name="input_course_jieshu">总节数不超过4</string>    
    <string name="to">至</string>     
    <string name="jieshulimit">1 2 3 4</string>                    
</resources>