<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/atitude_and_longitude"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20sp"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/result1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="18sp"/>

    <TextView
        android:text="@string/classroom_site"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/result2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="18sp"/>

    <Button
        android:text="@string/get_classroom_site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idGetClassroomSite" />

</LinearLayout>
